--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Ryeker</h1>
+        <h1>Christopher</h1>
       </div>
       <div class="col-md-9">
-        <h3>I am awesome. Let me just get that out there now. Now that you know that, your life is better. You're welcome.</h3>
+        <h3>I signed up for this class because I want a career in web development, I hope after taking these classes I'll be on track to getting invited into a cohort one day.</h3>
       </div>
     </div>
   </div>
